--- a/nowe_style.css
+++ b/nowe_style.css
@@ -9,7 +9,7 @@ ol {
 ol > li {
 	float: left;
 	background-color: black;
-	width: 450px;
+	width: 475px;
 	margin-left: 1px;
 }
 ol a {
@@ -36,7 +36,8 @@ ol > li > ul > li > a {
   border-top:1px solid #FFF;
 }
 ol > li > ul > li {
-	background-color: black
+	height: 35px;
+	background-color: black;
 }
 ol > li > ul > li:hover {
 	background-color: #DDD;
